# ai

./: .gitignore  CLAUDE.md  README.md  llms.txt
HITL-proxy/: .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  Makefile  README.cn.md  README.md  config.example.yaml  go.mod  go.sum
HITL-proxy/cmd/hitl-bridge/: hitl_bridge.py  main.go  pyproject.toml  test_hitl_bridge.py  test_smoke.py
all2txt/: .gitignore  Makefile  README.cn.md  README.md  all2txt.toml  all2txt.yaml  pyproject.toml
all2txt/all2txt/: __init__.py  __main__.py
all2txt/all2txt/backends/: __init__.py  _util.py  archive.py  asr.py  libreoffice.py  native_office.py  ocr.py  openai_vision.py  pandoc.py  plaintext.py  pymupdf.py  system.py  tika.py  unstructured.py
all2txt/all2txt/core/: __init__.py  base.py  config.py  registry.py
all2txt/docs/: design.md  req.md
all2txt/tests/test_backends/: _helpers.py  conftest.py  test_archive.py  test_archive_tar.py  test_archive_zip.py  test_asr.py  test_backends.py  test_ocr.py  test_office.py  test_pdf.py  test_plaintext_pandoc.py  test_system.py
all2txt/tests/test_core/: test_config.py  test_main.py  test_registry.py
auto_cut/: README.md  main.py  pyproject.toml
comfyuiapi/: CLAUDE.md  Makefile  README.md  gen-images.py  gen_images.py  llms.txt  pixels.csv  pyproject.toml  test_device_table.py  test_pixels.csv  test_theme.txt  test_variations.txt  upscale.py  usdu.py  wf.py  zit.py
comfyuiapi/libs/: __init__.py  aurasr.py  constants.py  device.py  image.py  libs.py  outpaint.py  upscale.py  usdu.py  workflow.py  zit.py
dkai/: .bashrc  .dockerignore  Dockerfile  Makefile  README.cn.md  README.md  dkai  packages.txt  run_agent  sudoers  ttyd.SHA256SUMS
elocate/: .gitignore  Makefile  README.cn.md  README.md  pyproject.toml
elocate/docs/: design.md  req.md
elocate/src/elocate/: __init__.py  chunker.py  cli.py  config.py  db.py  embedder.py  indexer.py  searcher.py
elocate/tests/: test_chunker.py  test_cli.py  test_config.py  test_db.py  test_embedder.py  test_indexer.py  test_searcher.py
little-agent/: .gitignore  AGENTS.md  Dockerfile  Makefile  README.cn.md  README.md  pyproject.toml
little-agent/ci_tests/: conftest.py  helpers.py  test_acp.py  test_basic.py  test_ci.py  test_cli.py  test_compressor.py  test_hooks.py  test_permissions.py  test_search.py  test_tools.py  test_web.py
little-agent/docs/: design.md  req.md
little-agent/eval/: 1.0-basic.md  1.1-basic_hello.py  1.2-basic_tool.py  1.3-basic_gradient.py  1.4-basic_conflict.py  2.0-compress.md  2.0-compress_gen_baseline.py  2.1-compress_quality.py  3.0-tools.md  3.1-tools_swap.py  3.2-tools_select.py  3.3-tools_capability.py  4.0-pressure.md  4.1-pressure_turns.py  4.2-pressure_data.py  4.3-pressure_tools.py  5.0-system.md  5.1-system_compliance.py  5.2-system_fence.py  Makefile  README.md
little-agent/frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  style.css  tsconfig.json  vitest.config.ts
little-agent/frontend/src/: app.test.ts  app.ts  dom.ts  format.test.ts  format.ts  history.test.ts  history.ts  messages.test.ts  messages.ts  sessionList.test.ts  state.test.ts  test-setup.ts  toolCalls.test.ts  toolCalls.ts  types.ts  ws.test.ts  ws.ts
little-agent/little_agent/: __init__.py  _utils.py  compressor.py  main.py  memory.py  permissions.py  types.py
little-agent/little_agent/agent/: __init__.py  agent.py  compressor.py  context.py  core.py  exceptions.py  hooks.py  logger.py  nodes.py  permissions.py  protocol.py  session.py  session_store.py  tool_invoker.py  tool_manager.py  tool_setup.py  turn_runner.py
little-agent/little_agent/backends/: __init__.py  _base.py  _utils.py  anthropic.py  build.py  exceptions.py  openai.py  protocol.py
little-agent/little_agent/frontends/: __init__.py  acp.py  build.py  cli.py  protocol.py  web.py
little-agent/little_agent/frontends/static/: .prettierrc.json  app.js  app.ts  index.html  package.json  tsconfig.json  vitest.config.ts
little-agent/little_agent/frontends/static/src/: app.ts  dom.ts  history.ts  messages.test.ts  messages.ts  sessionList.ts  state.ts  toolCalls.test.ts  toolCalls.ts  ws.ts
little-agent/little_agent/frontends/web/: __init__.py  client.py  handlers.py  server.py  store.py
little-agent/little_agent/tools/: __init__.py  bash.py  build.py  builtin.py  config_loader.py  exceptions.py  file.py  http.py  manager.py  mcp.py  protocol.py  session_search.py  task.py
little-agent/tests/: conftest.py  mocks.py  test_acp_frontend.py  test_agent.py  test_anthropic_backend.py  test_backends.py  test_bash_tool.py  test_bg_tasks.py  test_cli_frontend.py  test_compressor.py  test_config_loader.py  test_context_logging.py  test_file_tools.py  test_frontends.py  test_hooks.py  test_http_tool.py  test_logger.py  test_main.py  test_mcp_provider.py  test_memory.py  test_node_serialization.py  test_permissions.py  test_provider_loading.py  test_session_load.py  test_session_search.py  test_session_store.py  test_task_tool.py  test_think_parser.py  test_tool_invoker.py  test_tools.py  test_utils.py  test_web_frontend.py  test_web_handlers.py  test_web_store.py
little-agent/tests/backends/: conftest.py  test_anthropic_backend.py  test_backend_common.py  test_backend_protocol.py  test_openai_backend.py
little-agent/tests/fixtures/: mock_mcp_server.py
llm4decompile/: README.md  ls_func1.c  ls_func1_ds4p.c  ls_func1_k26.c  ls_func1_m27.c  ls_func1_opus47.c  ls_func2.c  ls_func2_ds4p.c  ls_func2_k26.c  ls_func2_m27.c  ls_func2_opus47.c  ls_func2_refined.c  ls_func3.c  ls_func3_ds4p.c  ls_func3_k26.c  ls_func4.c  (+12 more)
review/: AGENT.md  README.md  gen-sign.py  gen_callgraph.py  pyproject.toml
summary/: .env.example  .gitignore  CLAUDE.md  README.md  kev_report.py  pyproject.toml  read_nyt.py  read_nyt_rss.py
summary/reports/kev/: kev_report_20260401.json  kev_report_20260401.md  kev_report_20260501.json  kev_report_20260501.md
tgbot/: .gitignore  LICENSE  Makefile  README.cn.md  README.md  pyproject.toml  tgbot.md  tgbot.py
tgbot/docs/: design.md  req.md
tgbot/tests/: test_tgbot.py
(+72 files in other folders)
