[project]
name = "elocate"
version = "0.1.0"
description = "Vector-based local document search tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.5",
    "sentence-transformers>=2.0",
    "click>=8.0",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
all2txt = ["all2txt"]
openai = ["openai>=1.0"]

[project.scripts]
elocate = "elocate.cli:main_search"
elocate-updatedb = "elocate.cli:main_updatedb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elocate"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=elocate --cov-report=term-missing"

[tool.uv]
torch-backend = "cpu"

[tool.uv.sources]
all2txt = { path = "/home/shell/src/github.com/shell909090/ai/all2txt" }
