[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "little-agent"
version = "0.1.0"
description = "A minimal agent system with CLI frontend"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
little-agent = "little_agent.main:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["little_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C90"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "UP037", "UP007"]
mccabe.max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260408",
]
