[project]
name = "summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "langchain-core",
    "langchain-community",
    "litellm",
    "langchain-litellm>=0.3.5",
    "feedparser>=6.0.12",
]
