[project]
name = "summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "langchain-core",
    "langchain-community",
    "litellm",
    "langchain-litellm>=0.3.5",
    "feedparser>=6.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10
