[project]
name = "tgbot"
version = "0.1.0"
description = "Telegram-to-ACP bridge helper"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["C90", "E", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = ["tgbot"]

[tool.coverage.report]
show_missing = true
skip_covered = false
