[project]
name = "hitl-bridge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
hitl-bridge = "hitl_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.5",
    "uvicorn>=0.30",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10
